# mica

./: AGENTS.md  Cargo.toml  README.md  default.nix  package.json  spec.md
.github/workflows/: build.yml  release.yml
crates/mica-cli/: Cargo.toml
crates/mica-cli/src/: main.rs
crates/mica-cli/src/tui/: app.rs  input.rs  ui.rs
crates/mica-cli/tests/: cli_smoke.rs
crates/mica-core/: Cargo.toml  build.rs
crates/mica-core/src/: config.rs  lib.rs  nixgen.rs  nixparse.rs  preset.rs  state.rs
crates/mica-index/: Cargo.toml
crates/mica-index/src/: generate.rs  lib.rs  schema.rs  versions.rs
docs/: cli.md  configuration.md  getting-started.md  index.md  pinning-and-index.md  presets.md  troubleshooting.md  tui.md
docs/.vitepress/: config.mts
presets/: crystal.toml  data.toml  db-pg.toml  db-redis.toml  devops.toml  dotnet.toml  elixir.toml  go.toml  java.toml  nim.toml  node.toml  nvidia.toml  ocaml.toml  php.toml  ruby.toml  rust.toml  terraform.toml  uv.toml  vlang.toml
presets/old/: python.toml
