[package]
name = "mica-core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
